--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 			}
 			
 			.body{
-			width: 500;
-			height: 685;
+			width: 498;
+			height: 683;
 			background-color: white;
 			position: absolute;
 			margin-top: 155;
 			margin-left: 10;
+			padding: 1;
 			}
 			
 			.sbar{
@@ -70,12 +71,14 @@
 			</div>
 			
 			<div class="body">
+				&nbsp;&nbsp;&nbsp;&nbsp;SandBlocks is a 3D sandbox game currently in development.
+				for inquiries contact the project head, <a href="https://haywalk.github.io">haywalk</a>.
 			</div>
 			
 			<div class="sbar">
 			</div>
 		</div>
 		
-		<center>Copyright 2018 Hayden Walker<center>
+		<center>Copyright 2018 Hayden Walker - Last Updated 1/1/2018 @ 12:54 PM AST<center>
 	</body>
 </html>
