Archived homepage and made temporary replacement.

--- a/index.html
+++ b/index.html
@@ -2,83 +2,26 @@
 	<head>
 		<title>SandBlocks</title>
 		<style>
-			body{
-			width: 800;
-			margin-left: auto;
-			margin-right: auto;
-			font-family: "comic sans ms";
-			}
-			
-			a{color: blue;}a:hover{color: red;}
-			.a{margin-left:5;margin-right:5;}
-			
-			.main{
-			width: 800;
-			height: 850;
-			background-color: lightblue;
-			}
-			
-			.banner{
-			width: 780;
-			height: 100;
-			margin-left: 10;
-			margin-top: 10;
-			position: absolute;
-			background-color: white;
-			}
-			
-			.menu{
-			width: 780;
-			height: 25;
-			margin-top: 120;
-			margin-left: 10;
-			background-color: lightgrey;
-			position: absolute;
-			}
-			
-			.body{
-			width: 498;
-			height: 683;
-			background-color: white;
-			position: absolute;
-			margin-top: 155;
-			margin-left: 10;
-			padding: 1;
-			}
-			
-			.sbar{
-			width: 270;
-			height: 685;
-			background-color: white;
-			position: absolute;
-			margin-top: 155;
-			margin-left: 520;
-			}
+			a{color: blue;}a:hover{color:red;}
 		</style>
 	</head>
 
 	<body>
-		<div class="main">
-			<div class="banner">
-			</div>
-			
-			<div class="menu">
-				<center>
-					<a class="a" href="">Home</a>
-					<a class="a" href="">Downloads</a>
-					<a class="a" href="">Log In/Sign Up</a>
-				</center>
-			</div>
-			
-			<div class="body">
-				&nbsp;&nbsp;&nbsp;&nbsp;SandBlocks is a 3D sandbox game currently in development.
-				for inquiries contact the project head, <a href="https://haywalk.github.io">haywalk</a>.
-			</div>
-			
-			<div class="sbar">
-			</div>
-		</div>
-		
-		<center>Copyright 2018 Hayden Walker - Last Updated 1/1/2018 @ 12:54 PM AST<center>
+		<h2>What is this project?</h2>
+		<ul>
+			<li>SandBlocks is an idea for a 3D, physics-based, block-building sandbox game.</li>
+		</ul>
+		<h2>Who's behind it?</h2>
+		<ul>
+			<li>I am! I'm Hayden, and you can find my personal Web site <a href="https://haywalk.github.io">here</a>.
+		</ul>
+		<h2>Is this project underway?</h2>
+		<ul>
+			<li>Not yet! I made this page simply to reserve the name; hopefully work will begin within a few months to a year from now.</li>
+		</ul>
+		<h2>When's now?</h2>
+		<ul>
+			<li>This page was last updated on <b>2 September 2019</b>.</li>
+		</ul>
 	</body>
 </html>
